Bug #19852 Restoring backup made from cluster with full data memory fails
Submitted: 16 May 2006 15:30 Modified: 2 Sep 2006 8:08
Reporter: Geert Vanderkelen
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:Linux (Linux)
Assigned to: Tomas Ulin Target Version:

[16 May 2006 15:30] Geert Vanderkelen
Description:

Restoring a backup made using the hot backup in Cluster using ndb_restore fails when the
backup was taking from a cluster which has full data memory.
Putting the memory higher is a workaround, but not mostly not an option.

How to repeat:

- setup a cluster (1 datanode) with small Datamemory, like 10Mb
- fill till no space available anymore (hug ALL DUMP 1000)
- take a backup
- ndbd --initial
- ndb_restore the backup
=> fails.

827: Out of memory in Ndb Kernel, table data (increase DataMemory)
Restore: Failed to restore data due to a unrecoverable error. Exiting...

NDBT_ProgramExit: 1 - Failed
[27 Jun 2006 8:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/8288
[27 Jun 2006 9:35] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/8293
[27 Jun 2006 11:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/8299
[27 Jun 2006 11:25] Tomas Ulin
5.1 merge
  http://lists.mysql.com/commits/8293
[27 Jun 2006 11:50] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/8303
[28 Jun 2006 0:53] Tomas Ulin
pushed to 5.1.12 and 5.0.23
won't fix in 4.1
[28 Jun 2006 6:16] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://www.mysql.com/doc/en/Installing_source_tree.html

Documented bugfix in 5.0.23 & 5.1.12 changelogs. Closed.
[29 Jun 2006 8:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/8449
[3 Aug 2006 14:46] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10005

ChangeSet@1.2233, 2006-08-03 14:46:11+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#20892
    Correction of bug#19852 (that also revealed another bug)
    Do grow noOfPagesToGrow with more than was actually allocated
[1 Sep 2006 21:32] Jonas Oreland
pushed to 5.0.25
smaller correction of previous patch
[2 Sep 2006 8:08] Jon Stephens
Noted availability of improved patch in 5.0.25 changelog.