Bug #19852  	Restoring backup made from cluster with full data memory fails - make sure to allocate just enough pages in the fragments by using the actual   row count from the backup, to avoid over allocation of pages to fragments, and   thus avoid the bug