ndb/include/kernel/signaldata/TupFrag.hpp
@@ -30,7 +30,7 @@ class TupFragReq {
   friend class Dblqh;
   friend class Dbtup;
 public:
-  STATIC_CONST( SignalLength = 14 );
+  STATIC_CONST( SignalLength = 17 );
 private:
   Uint32 userPtr;
   Uint32 userRef;
@@ -38,7 +38,18 @@ private:
   Uint32 tableId;
   Uint32 noOfAttr;
   Uint32 fragId;
-  Uint32 todo[8];
+  Uint32 maxRowsLow;
+  Uint32 maxRowsHigh;
+  Uint32 minRowsLow;
+  Uint32 minRowsHigh;
+  Uint32 noOfNullAttr;
+  Uint32 schemaVersion;
+  Uint32 noOfKeyAttr;
+  Uint16 noOfNewAttr;
+  Uint16 noOfCharsets;
+  Uint32 checksumIndicator;
+  Uint32 noOfAttributeGroups;
+  Uint32 globalCheckpointIdIndicator;
 };
 
 class TupFragConf {
